--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -20,11 +20,8 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"],
-  "exclude": ["src/api/generated"],
-  "references": [{ "path": "./tsconfig.generated.json" }]
+  "include": ["src"]
 }
