--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,13 @@
     "generate-api": "openapi-generator-cli generate"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-query": "^5.90.20",
     "axios": "^1.13.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router": "^7.12.0"
+    "react-router": "^7.12.0",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
