Implement weight tracking with database integration
- Replaced mock data in `WeightController` with database-backed implementation.
- Introduced `WeightService` for handling weight-related operations.
- Added `WeightRepository` for database interaction.
- Introduced new entities: `Weight`, `User`, and `TorrentGroup`.
- Updated `LoginService` with password verification.
- Enhanced security with `UserSecurityContext` and `BCryptPasswordEncoder`.
- Added PostgreSQL support and configured datasource in application properties.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,3 +4,15 @@ server:
 spring:
   application:
     name: sirbikapp
+  datasource:
+    url: ${DB_URL:jdbc:postgresql://localhost:5432/home_server}
+    username: ${DB_USER:postgres}
+    password: ${DB_PASSWORD:12345678}
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto: ${JPA_DDL_AUTO:none}
+    open-in-view: false
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
