--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,3 +16,8 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+
+qbittorrent:
+  base-url: ${QBITTORRENT_BASE_URL:http://192.168.1.51:8080}
+  username: ${QBITTORRENT_USERNAME:admin}
+  password: ${QBITTORRENT_PASSWORD:KmL333@torrent}
